# pyodide-reqwest-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
