[package]
name = "pyodide-reqwest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyodide_reqwest_demo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
reqwest = { git = "https://github.com/audunhalland/reqwest.git", branch = "pyodide", default-features = false, features = ["pyodide"] }
tokio = { version = "1", features = ["rt"] }
